<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.qumi.presentation.core.HomeFragment">

    <com.rahimlis.badgedtablayout.BadgedTabLayout
        android:id="@+id/badged_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:actionBarTabTextStyle="@style/MyActionBarTabStyle"
        app:badgeBackgroundColor="@color/darkThemeMessagesNumber"
        app:badgeSelectedBackgroundColor="@color/darkThemeSelected"
        app:badgeSelectedTextColor="@color/darkThemePrimaryText"
        app:badgeTextColor="@color/darkThemePrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        android:background="@color/darkBackGround"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@color/darkGray"
        app:tabSelectedTextColor="@color/darkThemeAccent"
        app:tabTextColor="@color/darkTabUnselected"
        app:tabUnboundedRipple="true">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_allChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allchats" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_spam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spam" />

    </com.rahimlis.badgedtablayout.BadgedTabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="569dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/badged_tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>