<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qumi.presentation.profile.components.SimOneFragment">

    <ProgressBar
        android:id="@+id/pb_tracker1"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_155sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/circle_progress_bar_dark_bg"
        android:indeterminate="false"
        android:progress="0"
        android:progressDrawable="@drawable/progress_dark_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/pb_tracker1"
        app:layout_constraintEnd_toEndOf="@+id/pb_tracker1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/pb_tracker1"
        app:layout_constraintTop_toTopOf="@+id/pb_tracker1"
        app:layout_constraintVertical_bias="0.45"
        android:gravity="center">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:background="@color/darkThemeAccent" />

        <TextView
            android:id="@+id/tv_consumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/consumed"
            android:textColor="@color/darkThemeSecondaryText"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/pb_tracker1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.5" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_tracker1"
        app:layout_constraintEnd_toEndOf="@+id/pb_tracker1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center">

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:background="@color/darkThemeMessagesNumberDarker" />

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/left"
            android:textColor="@color/darkThemeSecondaryText"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/pb_tracker1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.5" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_most_consuming_chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_consuming_chats"
        android:textColor="@color/darkThemePrimaryText"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_tracker1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toTopOf="@+id/pb_tracker1"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tv_most_consuming_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Crush:sent 80% received 20%"
        android:textColor="@color/darkThemeSecondaryTextBrighter"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_tracker1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/tv_most_consuming_chats"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/pb_most_consuming_chat"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_155sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:progressDrawable="@drawable/progress_dark_drawable_most_consuming_chats"
        android:secondaryProgressTint="@color/trackerGray"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/tv_most_consuming_chat" />

    <TextView
        android:id="@+id/tv_middle_consuming_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Li:sent 70% received 20%"
        android:textColor="@color/darkThemeSecondaryTextBrighter"
        android:textSize="@dimen/_10sdp"
        android:progress="50"
        android:progressDrawable="@drawable/progress_drawable_most_consuming_chats"
        android:secondaryProgressTint="@color/darkThemeSecondaryText"
        app:layout_constraintBottom_toTopOf="@+id/tv_least_consuming_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/tv_most_consuming_chat"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/pb_middle_consuming_chat"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_155sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:progressDrawable="@drawable/progress_dark_drawable_most_consuming_chats"
        android:secondaryProgressTint="@color/trackerGray"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/tv_middle_consuming_chat" />

    <TextView
        android:id="@+id/tv_least_consuming_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moh:sent 60% received 20%"
        android:textColor="@color/darkThemeSecondaryTextBrighter"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_tracker1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/tv_most_consuming_chat"
        app:layout_constraintVertical_bias="0.7" />

    <ProgressBar
        android:id="@+id/pb_least_consuming_chat"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_155sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:progressDrawable="@drawable/progress_dark_drawable_most_consuming_chats"
        android:secondaryProgressTint="@color/trackerGray"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toEndOf="@+id/pb_tracker1"
        app:layout_constraintTop_toBottomOf="@+id/tv_least_consuming_chat" />

    <TextView
        android:id="@+id/tv_bundles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/bundles"
        android:textColor="@color/darkThemePrimaryText"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_tracker1" />

    <ImageButton
        android:id="@+id/img_btn_addBundle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/ripple_effect_img_btn_dark_mode"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bundles"
        app:layout_constraintStart_toEndOf="@+id/tv_bundles"
        app:layout_constraintTop_toTopOf="@+id/tv_bundles"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/accentLightMode" />

    <LinearLayout
        android:id="@+id/bundles_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_addBundle"
        app:layout_constraintVertical_bias="0.0"
        android:paddingStart="@dimen/_15sdp">

        <include
            android:layout_marginTop="@dimen/_5sdp"
            layout="@layout/bundle_sim"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <include
            layout="@layout/bundle_sim"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>